# armsimu

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build_and_run.bat
.github/workflows/: c-cpp.yml
dep/linker/: armadillo.lib
include/: armsimu.hpp  integrators.hpp  kahansum.hpp  plotter.hpp  system.hpp  utility.hpp  window_manager.hpp
src/: main.cc  plotter.cc  system.cc  window_manager.cc
